--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
     sdk: flutter
 
   google_polyline_algorithm: ^2.0.0
-  google_maps_flutter: ^0.5.28+1
-  google_directions_api: ^0.5.0
+  google_maps_flutter: ^1.2.0
+  google_directions_api:
+    git:
+      url: https://github.com/waseemdev/google_directions_api.git
   google_maps: ^3.4.3
-  http: ^0.12.1
-  flinq: ^1.1.0
+  http: ^0.13.0
+  flinq: ^1.1.1
   uuid: ^2.1.0
 
 dev_dependencies:
